--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Pharmacutical inc.</title>
 		<meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,600i,700|Open+Sans:400,400i,600,700" rel="stylesheet">
 		<link href="main.css" type="text/css" rel="stylesheet" />
         <script src="js/jquery-3.2.1.min.js"></script>
@@ -12,14 +13,30 @@
         <header> 
             <div class="menu">
                 <div class="hamburger">
-                    <div class="line One"></div>
-                    <div class="line Two"></div>
-                    <div class="line Three"></div>
+                    <div class="line one"></div>
+                    <div class="line two"></div>
+                    <div class="line three"></div>
                 </div>
+
+                <div class="logo"> <h1>Pharmacutical inc.</h1> </div>
+                <a href="#" class="login button">
+                        <p>Login</p>
+               </a>
+
+               <div class="basket">
+                   <img src="Img/basket.png" alt="">
+               </div>
                 <nav>
                     <ul>
                         <li>Products</li>
                         <li>Education</li>
+                            <ul>
+                                <li>Medical Educations</li>
+                                <li>Elearning</li>
+                                <li>Educational videos</li>
+                                <li>Educational slides</li>
+                                <li>Educational forum</li>
+                            </ul>
                         <li>Therapy areas</li>
                         <li>Free patient material</li>
                         <li>News and events</li>
@@ -29,32 +46,40 @@
                     </ul>
                 </nav>
 
-                <div class="logo"> <h1>LOGO</h1> </div>
-                <a href="#">
-                    <div class="login"> 
-                        <p>Login</p>
-                   </div>
-               </a>
-
-               <div class="basket">
-                   <img src="Img/basket.png" alt="">
-               </div>
             </div>
+            <hr>
         </header>
         <main>
             <div class="banner">
-                <a href="">Register</a>
+                <a href="#" class=" register button">
+                    <p>Register</p>
+                </a>
+                
             </div>
 
-
-                CONTENT!
+            <div class="startContent">
+<!--                <h2>Pharmcutical inc.</h2>-->
+               <div class="box box-one">
+<!--                    <img src="Img/orange.jpg" alt="">-->
+                    <h2>Orange</h2>
+                </div>
+                <div class="box box-two">
+<!--                    <img src="Img/orange.jpg" alt="">-->
+                    <h2>Orange</h2>
+                </div>
+                <div class="box box-three">
+<!--                    <img src="Img/orange.jpg" alt="">-->
+                    <h2>Orange</h2>
+                </div>
+                <div class="box box-four">
+<!--                    <img src="Img/orange.jpg" alt="">-->
+                    <h2>Orange</h2>
+                </div>
+            </div>
+            
+            <div class="startNewsletter">
+                <a href="#" class=" newsLetter button"> <p>Sign up for Newsletter</p></a>
+            </div>
         </main>
-
-        <div class="cookie">
-           <h2>Cookie</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis elit vulputate, vulputate nunc et, elementum lectus. Fusce enim massa, feugiat id diam non, elementum congue mi.</p>
-
-            <a href="">OK</a>
-        </div>
 	</body>
 </html>
