--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,600i,700|Open+Sans:400,400i,600,700" rel="stylesheet">
-		<link href="main.css" type="text/css" rel="stylesheet" />
+		<link href="css/main.css" type="text/css" rel="stylesheet" />
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/main.js"></script>
 	</head>
@@ -24,7 +24,7 @@
                </a>
 
                <div class="basket">
-                   <img src="Img/basket.png" alt="">
+                   <img src="img/basket.png" alt="">
                </div>
                 <nav>
                     <ul>
