I whised it worked

--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -18,8 +18,8 @@
                     <div class="line three"></div>
                 </div>
 
-                <div class="logo"> <h1>Pharmacutical inc.</h1> </div>
-                <a href="#" class="login button">
+                <div class="logo"> <h1>Pharm inc.</h1> </div>
+                <a href="#" class="login-button button">
                         <p>Login</p>
                </a>
 
@@ -27,22 +27,22 @@
                    <img src="img/basket.png" alt="">
                </div>
                 <nav>
-                    <ul>
-                        <li>Products</li>
-                        <li>Education</li>
-                            <ul>
+                    <ul class="main-menu">
+                        <li>Products <img src="img/menu-arrow.png" alt=""></li>
+                        <li id="menu-item-education">Education <img src="img/menu-arrow.png" class="education-arrow" alt=""></li>
+                            <ul class="submenu">
                                 <li>Medical Educations</li>
                                 <li>Elearning</li>
                                 <li>Educational videos</li>
                                 <li>Educational slides</li>
                                 <li>Educational forum</li>
                             </ul>
-                        <li>Therapy areas</li>
-                        <li>Free patient material</li>
-                        <li>News and events</li>
-                        <li>Contact & information</li>
-                        <li>About</li>
-                        <li><img src="Img/search.png" alt=""></li>  
+                        <li>Therapy areas <img src="img/menu-arrow.png" alt=""></li>
+                        <li>Free patient material <img src="img/menu-arrow.png" alt=""></li>
+                        <li>News and events <img src="img/menu-arrow.png" alt=""></li>
+                        <li>Contact & information <img src="img/menu-arrow.png" alt=""></li>
+                        <li>About <img src="img/menu-arrow.png" alt=""></li>
+                        <li>Search<img src="img/search.png" alt=""></li>  
                     </ul>
                 </nav>
 
@@ -59,21 +59,21 @@
 
             <div class="startContent">
 <!--                <h2>Pharmcutical inc.</h2>-->
-               <div class="box box-one">
+               <div class="start-box">
 <!--                    <img src="Img/orange.jpg" alt="">-->
-                    <h2>Orange</h2>
+                    <h2>Content 1</h2>
                 </div>
-                <div class="box box-two">
+                <div class="start-box">
 <!--                    <img src="Img/orange.jpg" alt="">-->
-                    <h2>Orange</h2>
+                    <h2>Content 2</h2>
                 </div>
-                <div class="box box-three">
+                <div class="start-box">
 <!--                    <img src="Img/orange.jpg" alt="">-->
-                    <h2>Orange</h2>
+                    <h2>Content 3</h2>
                 </div>
-                <div class="box box-four">
+                <div class="start-box">
 <!--                    <img src="Img/orange.jpg" alt="">-->
-                    <h2>Orange</h2>
+                    <h2>Content 4</h2>
                 </div>
             </div>
             
@@ -81,5 +81,8 @@
                 <a href="#" class=" newsLetter button"> <p>Sign up for Newsletter</p></a>
             </div>
         </main>
+        <footer>
+            <p>All rights reserved to Parmacutical inc.®</p>
+        </footer>
 	</body>
 </html>
