somethings got fixed

--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -28,8 +28,8 @@
                </div>
                 <nav>
                     <ul class="main-menu">
-                        <li>Products <img src="img/menu-arrow.png" alt=""></li>
-                        <li id="menu-item-education">Education <img src="img/menu-arrow.png" class="education-arrow" alt=""></li>
+                        <li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
+                        <li id="menu-item-education">Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
                             <ul class="submenu">
                                 <li>Medical Educations</li>
                                 <li>Elearning</li>
@@ -37,12 +37,13 @@
                                 <li>Educational slides</li>
                                 <li>Educational forum</li>
                             </ul>
-                        <li>Therapy areas <img src="img/menu-arrow.png" alt=""></li>
-                        <li>Free patient material <img src="img/menu-arrow.png" alt=""></li>
-                        <li>News and events <img src="img/menu-arrow.png" alt=""></li>
-                        <li>Contact & information <img src="img/menu-arrow.png" alt=""></li>
-                        <li>About <img src="img/menu-arrow.png" alt=""></li>
-                        <li>Search<img src="img/search.png" alt=""></li>  
+                        </li>
+                        <li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
+                        <li>Free patient material <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
+                        <li>News and events <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
+                        <li>Contact & information <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
+                        <li>About <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
+                        <li>Search<img class="search-icon" src="img/search.png" alt=""></li>  
                     </ul>
                 </nav>
 
