Menu fixes, not super user friendly right now...

--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -18,7 +18,7 @@
                     <div class="line three"></div>
                 </div>
 
-                <div class="logo"> <h1>Pharm inc.</h1> </div>
+                <div class="logo"> <h1 class="logosmall">Pharm inc.</h1> <h1 class="logobig">Pharmacutical inc.</h1> </div>
                 <a href="#" class="login-button button">
                         <p>Login</p>
                </a>
@@ -28,21 +28,60 @@
                </div>
                 <nav>
                     <ul class="main-menu">
-                        <li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
-                        <li id="menu-item-education">Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                        <li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt="">
                             <ul class="submenu">
-                                <li>Medical Educations</li>
-                                <li>Elearning</li>
-                                <li>Educational videos</li>
-                                <li>Educational slides</li>
-                                <li>Educational forum</li>
+                                <li><a href="">All products</a></li>
+                                <li><a href="">Cardio Vascular</a></li>
+                                <li><a href="">Respiratory</a></li>
+                                <li><a href="">Diabetes</a></li>
+                                <li><a href="">Oncology</a></li>
                             </ul>
                         </li>
-                        <li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
-                        <li>Free patient material <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
-                        <li>News and events <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
-                        <li>Contact & information <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
-                        <li>About <img src="img/menu-arrow.png" class="menu-arrow" alt=""></li>
+                        <li>Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Medical Educations</a></li>
+                                <li><a href="education.html">E-learning</a> </li>
+                                <li><a href="">Educational videos</a></li>
+                                <li><a href="">Educational slides</a></li>
+                                <li><a href="">Educational forum</a></li>
+                            </ul>
+                        </li>
+                        <li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Oncology</a></li>
+                                <li><a href="">Diabetes</a></li>
+                                <li><a href="">Respiratory</a></li>
+                                <li><a href="">Cardio Vascular</a></li>
+                            </ul>
+                        </li>
+                        <li>Free patient material <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Order Materials</a></li>
+                            </ul>
+                        </li>
+                        <li>News and events <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Science</a></li>
+                                <li><a href="">Network</a></li>
+                                <li><a href="">Newsletter</a></li>
+                            </ul>
+                        </li>
+                        <li>Contact & information <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Contact form</a></li>
+                                <li><a href="">Customer service</a></li>
+                                <li><a href="">FAQ</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">About </a><img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">About pharm inc.</a></li>
+                                <li><a href="">Collaborations</a></li>
+                                <li><a href="">Sustainability</a></li>
+                                <li><a href="">Board & Management</a></li>
+                                <li><a href="">Press material</a></li>  
+                            </ul>
+                        </li>
                         <li>Search<img class="search-icon" src="img/search.png" alt=""></li>  
                     </ul>
                 </nav>
@@ -50,7 +89,7 @@
             </div>
             <hr>
         </header>
-        <main>
+        <main class="maincontent">
             <div class="banner">
                 <a href="#" class=" register button">
                     <p>Register</p>
