--- a/Interaction project/education.html
+++ b/Interaction project/education.html
@@ -124,11 +124,31 @@
 
         </main>
 
-        <div class="notification">
-           <h2>Notification</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis elit vulputate, vulputate nunc et, elementum lectus. Fusce enim massa, feugiat id diam non, elementum congue mi.</p>
-            <a href="" class="ok-btn">OK</a>
-        </div>
+				<div class="notification-overflow">
+					<div class="notification-box">
+		        <div class="notification-1">
+		           <h2>Activate notifications?</h2>
+		            <p>Do you want the latest news in e-learning? Never miss a thing! Activate your notifications and you will be notified about all things new!</p>
+		            <a href="" class="yes-btn">Yes, please!</a>
+								<a href="" class="no-btn">No, thank you.</a>
+		        </div>
+						<div class="notification-2">
+							<a href="#" class="x">x</a>
+		          <h2>You will now recieve notifications</h2>
+		          <p>You are able to change your notification settings under your profile.</p>
+		        </div>
+					</div>
+				</div>
+
+				<!-- <div class="cookie-overflow">
+					<div class="cookie-box">
+		        <div class="cookie-1">
+		           <h2>Cookies</h2>
+		            <p>To make your experience as good as possible we are collecting cookies. <a href="#">Read more</a>.</p>
+		            <a href="" class="cookie-ok">Ok</a>
+		        </div>
+					</div>
+				</div> -->
 
         <footer>
         </footer>
