--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -30,20 +30,20 @@
                     <ul class="main-menu">
                         <li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt="">
                             <ul class="submenu">
-                                <li><a href="">All products</a></li>
-                                <li><a href="">Cardio Vascular</a></li>
-                                <li><a href="">Respiratory</a></li>
-                                <li><a href="">Diabetes</a></li>
-                                <li><a href="">Oncology</a></li>
+                                <li><a href="" tabindex="-1">All products</a></li>
+                                <li><a href="" tabindex="-1">Cardio Vascular</a></li>
+                                <li><a href="" tabindex="-1">Respiratory</a></li>
+                                <li><a href="" tabindex="-1">Diabetes</a></li>
+                                <li><a href="" tabindex="-1">Oncology</a></li>
                             </ul>
                         </li>
                         <li>Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
                             <ul class="submenu">
-                                <li><a href="">Medical Educations</a></li>
-                                <li><a href="education.html">E-learning</a> </li>
-                                <li><a href="">Educational videos</a></li>
-                                <li><a href="">Educational slides</a></li>
-                                <li><a href="">Educational forum</a></li>
+                                <li><a href="" tabindex="-1">Medical Educations</a></li>
+                                <li><a href="education.html" tabindex="-1">E-learning</a> </li>
+                                <li><a href="" tabindex="-1">Educational videos</a></li>
+                                <li><a href="" tabindex="-1">Educational slides</a></li>
+                                <li><a href="" tabindex="-1">Educational forum</a></li>
                             </ul>
                         </li>
                         <li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt="">
