--- a/Interaction project/education.html
+++ b/Interaction project/education.html
@@ -4,13 +4,91 @@
 		<title>Pharmacutical inc.</title>
 		<meta charset="utf-8" />
 	    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,600i,700|Open+Sans:400,400i,600,700" rel="stylesheet">
-		<link href="education.css" type="text/css" rel="stylesheet" />
+		<link href="css/main.css" type="text/css" rel="stylesheet" />
         <script src="js/jquery-3.2.1.min.js"></script>
-        <script src="js/education.js"></script>
+        <script src="js/main.js"></script>
+				<script src="js/education.js"></script>
 	</head>
 	<body>
-        <header>
-        </header>
+		<header>
+				<div class="menu">
+						<div class="hamburger">
+								<div class="line one"></div>
+								<div class="line two"></div>
+								<div class="line three"></div>
+						</div>
+
+						<div class="logo"> <h1 class="logosmall"><a href="index.html">Pharm inc.</a></h1> <h1 class="logobig"><a href="index.html">Pharmacutical inc.</a></h1> </div>
+						<a href="" class="login-button button">
+										<p>Login</p>
+					 </a>
+
+					 <div class="basket">
+							 <img src="img/basket.png" alt="">
+					 </div>
+						<nav>
+								<ul class="main-menu">
+										<li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+												<ul class="submenu">
+														<li><a href="" tabindex="-1">All products</a></li>
+														<li><a href="" tabindex="-1">Cardio Vascular</a></li>
+														<li><a href="" tabindex="-1">Respiratory</a></li>
+														<li><a href="" tabindex="-1">Diabetes</a></li>
+														<li><a href="" tabindex="-1">Oncology</a></li>
+												</ul>
+										</li>
+										<li>Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+												<ul class="submenu">
+														<li><a href="" tabindex="-1">Medical Educations</a></li>
+														<li><a href="education.html" tabindex="-1">E-learning</a> </li>
+														<li><a href="" tabindex="-1">Educational videos</a></li>
+														<li><a href="" tabindex="-1">Educational slides</a></li>
+														<li><a href="" tabindex="-1">Educational forum</a></li>
+												</ul>
+										</li>
+										<li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+												<ul class="submenu">
+														<li><a href="">Oncology</a></li>
+														<li><a href="">Diabetes</a></li>
+														<li><a href="">Respiratory</a></li>
+														<li><a href="">Cardio Vascular</a></li>
+												</ul>
+										</li>
+										<li>Free patient material <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+												<ul class="submenu">
+														<li><a href="">Order Materials</a></li>
+												</ul>
+										</li>
+										<li>News and events <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+												<ul class="submenu">
+														<li><a href="">Science</a></li>
+														<li><a href="">Network</a></li>
+														<li><a href="">Newsletter</a></li>
+												</ul>
+										</li>
+										<li>Contact & information <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+												<ul class="submenu">
+														<li><a href="">Contact form</a></li>
+														<li><a href="">Customer service</a></li>
+														<li><a href="">FAQ</a></li>
+												</ul>
+										</li>
+										<li>About<img src="img/menu-arrow.png" class="menu-arrow" alt="">
+												<ul class="submenu">
+														<li><a href="">About pharm inc.</a></li>
+														<li><a href="">Collaborations</a></li>
+														<li><a href="">Sustainability</a></li>
+														<li><a href="">Board & Management</a></li>
+														<li><a href="">Press material</a></li>
+												</ul>
+										</li>
+										<li>Search<img class="search-icon" src="img/search.png" alt=""></li>
+								</ul>
+						</nav>
+
+				</div>
+				<hr>
+		</header>
 
         <main>
           <div class="breadcrumb">
@@ -140,17 +218,8 @@
 					</div>
 				</div>
 
-				<!-- <div class="cookie-overflow">
-					<div class="cookie-box">
-		        <div class="cookie-1">
-		           <h2>Cookies</h2>
-		            <p>To make your experience as good as possible we are collecting cookies. <a href="#">Read more</a>.</p>
-		            <a href="" class="cookie-ok">Ok</a>
-		        </div>
-					</div>
-				</div> -->
-
-        <footer>
+				<footer>
+            <p>All rights reserved to Parmacutical inc.®</p>
         </footer>
 	</body>
 </html>
