--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -10,7 +10,7 @@
         <script src="js/main.js"></script>
 	</head>
 	<body>
-        <header> 
+        <header>
             <div class="menu">
                 <div class="hamburger">
                     <div class="line one"></div>
@@ -30,20 +30,20 @@
                     <ul class="main-menu">
                         <li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt="">
                             <ul class="submenu">
-                                <li><a href="" tabindex="-1">All products</a></li>
-                                <li><a href="" tabindex="-1">Cardio Vascular</a></li>
-                                <li><a href="" tabindex="-1">Respiratory</a></li>
-                                <li><a href="" tabindex="-1">Diabetes</a></li>
-                                <li><a href="" tabindex="-1">Oncology</a></li>
+                                <li><a href=""  >All products</a></li>
+                                <li><a href=""  >Cardio Vascular</a></li>
+                                <li><a href=""  >Respiratory</a></li>
+                                <li><a href=""  >Diabetes</a></li>
+                                <li><a href=""  >Oncology</a></li>
                             </ul>
                         </li>
                         <li>Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
                             <ul class="submenu">
-                                <li><a href="" tabindex="-1">Medical Educations</a></li>
-                                <li><a href="education.html" tabindex="-1">E-learning</a> </li>
-                                <li><a href="" tabindex="-1">Educational videos</a></li>
-                                <li><a href="" tabindex="-1">Educational slides</a></li>
-                                <li><a href="" tabindex="-1">Educational forum</a></li>
+                                <li><a href="">Medical Educations</a></li>
+                                <li class="education-link"><a href="education.html">E-learning</a> </li>
+                                <li><a href=""  >Educational videos</a></li>
+                                <li><a href=""  >Educational slides</a></li>
+                                <li><a href=""  >Educational forum</a></li>
                             </ul>
                         </li>
                         <li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt="">
@@ -73,16 +73,16 @@
                                 <li><a href="">FAQ</a></li>
                             </ul>
                         </li>
-                        <li><a href="">About </a><img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                        <li>About<img src="img/menu-arrow.png" class="menu-arrow" alt="">
                             <ul class="submenu">
                                 <li><a href="">About pharm inc.</a></li>
                                 <li><a href="">Collaborations</a></li>
                                 <li><a href="">Sustainability</a></li>
                                 <li><a href="">Board & Management</a></li>
-                                <li><a href="">Press material</a></li>  
+                                <li><a href="">Press material</a></li>
                             </ul>
                         </li>
-                        <li>Search<img class="search-icon" src="img/search.png" alt=""></li>  
+                        <li>Search<img class="search-icon" src="img/search.png" alt=""></li>
                     </ul>
                 </nav>
 
@@ -94,7 +94,7 @@
                 <a href="#" class=" register button">
                     <p>Register</p>
                 </a>
-                
+
             </div>
 
             <div class="startContent">
@@ -116,10 +116,21 @@
                     <h2>Content 4</h2>
                 </div>
             </div>
-            
+
             <div class="startNewsletter">
                 <a href="#" class=" newsLetter button"> <p>Sign up for Newsletter</p></a>
             </div>
+
+						<div class="cookie-overflow">
+							<div class="cookie-box">
+				        <div class="cookie-1">
+				           <h2>Cookies</h2>
+				            <p>To make your experience as good as possible we are collecting cookies. <a href="#">Read more</a>.</p>
+				            <a href="" class="cookie-ok">Ok</a>
+				        </div>
+							</div>
+						</div>
+
         </main>
         <footer>
             <p>All rights reserved to Parmacutical inc.®</p>
