--- a/Interaction project/education.html
+++ b/Interaction project/education.html
@@ -7,7 +7,7 @@
 		<link href="css/main.css" type="text/css" rel="stylesheet" />
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/main.js"></script>
-				<script src="js/education.js"></script>
+				<!--<script src="js/education.js"></script>-->
 	</head>
 	<body>
 		<header>
