--- a/Interaction project/education.html
+++ b/Interaction project/education.html
@@ -9,7 +9,7 @@
         <script src="js/main.js"></script>
 				<!--<script src="js/education.js"></script>-->
 	</head>
-	<body>
+	<body onload="notification();">
 		<header>
 				<div class="menu">
 						<div class="hamburger">
